update fetch card api
