# swagger-output.json
@@ -246,6 +246,45 @@
           }
         }
       }
+    },
+    "/qa/api/ABDM/Health-Id/DownloadABHACardViaMobileNumber/download": {
+      "post": {
+        "tags": [
+          "HealthCard-Download-Via-MobileNumber"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "token": {
+                  "example": "any"
+                },
+                "x_token": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
